# huzaifa-voice-assistant

./: .gitignore  .pypirc  FA.py  README.md  app.py  main.py  pyproject.toml  setup.py  vercel.json  web.py
huzaifa_voice_assistant/: __init__.py
huzaifa_voice_assistant.egg-info/: PKG-INFO
